# pluto_pizza_py

./: .gitignore  example.alembic.ini  example.env  main.py  pyproject.toml  seed.py
api/: auth.py
api/crud/: addresses_crud.py  cart_crud.py  product_customizations_crud.py  products_crud.py  toppings_crud.py  users_crud.py
api/db_utils/: product.py  users.py
api/routers/: addresses.py  carts.py  products.py  toppings.py  users.py
api/utils/: user.py
app/: main.py
app/database/: db.py  models.py
app/routers/: users.py
db/: association_tables.py  models.py  pre_seed.py  setup.py
db/factories/: address_factory.py  customization_topping_factory.py  product_customizations_factory.py  product_factory.py  user_factory.py
db/seed/: user_factory.py
migrations/: env.py
migrations/versions/: 0c30adc5b9c1_create_user_table.py  104cbf1bafa3_add_products_entity.py  1bd27e1fa4f6_products_users_addresses.py  27ae236f2b56_create_user_table.py  326f6c1597a9_create_product_customization_and_.py  4a1a3a079515_initial_generation.py  524ebc5cc833_add_cart_tables.py  613c9eeab617_add_users_products_and_addresses_tables.py  6cc4cccfb8d6_create_topping_and_topping_type.py  7683f4a06b45_create_users_table.py  972f831f4656_create_product_customization_and_.py  b1e284e9ea1f_create_users_and_products.py  cdf274203c08_relationship_cart_item_product_cust.py  f6959475f990_add_cart_tables_update_topping_.py
schema/: addresses_schema.py  cart_schema.py  product_customization_schema.py  products_schema.py  toppings_schema.py  users.py  users_schema.py
tests/: conftest.py  data.py  test_auth.py  test_main.py  test_products.py
util/: proxy.py
